<resources>
    <string name="app_name">Calendar</string>

    <string name="cl_footer_monthly">Monthly</string>
    <string name="cl_footer_weekly">Weekly</string>
    <string name="cl_footer_daily">Daily</string>
    <string name="cl_footer_summary">Summary</string>
    <string name="cl_footer_setting">Setting</string>


    <string name="cl_common_calendar_sub_title">%1$s Calendars</string>
    <string name="cl_common_validate_no_calendar_msg">Please choose calendar
    </string>

    <string name="fragment_schedule_form_title">New schedule</string>
    <string name="fragment_schedule_edit_title">Edit schedule</string>
    <string name="fragment_schedule_detail_title">Schedule detail</string>
    <string name="cl_schedule_form_all_day">All day</string>
    <string name="cl_schedule_form_repeat">Repeat</string>
    <string name="cl_schedule_form_schedule_info_title">Schedule information
    </string>
    <string name="cl_schedule_form_item_calendar">Calendar</string>
    <string name="cl_schedule_form_item_name">Name</string>
    <string name="cl_schedule_form_item_meeting_room">Room</string>
    <string name="cl_schedule_form_item_url">Url</string>
    <string name="cl_schedule_form_item_category">Category</string>
    <string name="cl_schedule_form_item_join_user">Join users</string>
    <string name="cl_schedule_form_item_schedule_note">Schedule note</string>

    <string name="cl_schedule_edit_mode_title">Edit mode</string>
    <string name="cl_schedule_delete_mode_title">Delete mode</string>
    <string name="cl_schedule_edit_mode_only_this">Change only this</string>
    <string name="cl_schedule_edit_mode_only_future">Change only future</string>
    <string name="cl_schedule_edit_mode_all">Change all</string>

    <string name="cl_schedule_confirm_mode_title">Confirm for duplicate</string>
    <string name="cl_schedule_confirm_mode_action_ok">Update</string>
    <string name="cl_schedule_confirm_mode_label_user">Duplicate time for users</string>
    <string name="cl_schedule_confirm_mode_label_room">Duplicate time for rooms</string>

    <string name="cl_schedule_confirm_change_cal">Join user information will be cleared because of changing calendar.</string>

    <string name="cl_filter_user_dialog_title">Filter users</string>
    <string name="cl_join_user_dialog_title">Join users</string>
    <string name="cl_schedule_repeat_dialog_title">Schedule repeat</string>
    <string name="cl_schedule_repeat_dialog_times">times</string>

    <string name="cl_schedule_repeat_type_weekly">Weekly</string>
    <string name="cl_schedule_repeat_type_monthly">Monthly</string>

    <string name="cl_schedule_repeat_weekly_message">Repeats weekly on %1$s
    </string>
    <string name="cl_schedule_repeat_monthly_message">Repeats monthly</string>
    <string name="cl_schedule_repeat_yearly_message">Repeats yearly</string>
    <string name="cl_schedule_repeat_until_message">, until %1$s.</string>
    <string name="cl_schedule_repeat_for_message">, for %1$s times.</string>
    <string name="cl_schedule_repeat_for_one_message">, for 1 time.</string>

    <string name="cl_schedule_repeat_limit_forever">Forever</string>
    <string name="cl_schedule_repeat_limit_until">Until</string>

    <string name="daily_page_all_day">All day</string>
    <string name="daily_page_morning">Morning</string>
    <string name="daily_page_afternoon">Afternoon</string>
    <string name="happy_birthday">Happy Birthday!</string>
    <string name="birthday_title">Birthdays</string>
    <string name="daily_schedules_event_title">Event</string>
    <string name="offer_title">Work offers</string>
    <string name="no_schedule">No schedule</string>

    <!--Notifications-->
    <string name="fragment_summary_title">Summary</string>
    <string name="coming_soon">Coming soon</string>
    <string name="FM_CL_001">%1$s has entered a schedule : %2$s </string>
    <string name="FM_CL_002">%1$s edited a schedule: %2$s</string>
    <string name="FM_CL_003">Today\’s schedule: %1$s item(s) \nToday\’s ToDo: %2$s item(s)</string>
    <string name="FM_CL_004">Tomorrow\’s schedule: %1$s item(s) \nTomorrow\’s ToDo: %2$s item(s)</string>
    <string name="FM_CL_0031">Today\’s schedule: %1$s item(s)</string>
    <string name="FM_CL_0032">Today\’s ToDo: %1$s item(s)</string>
    <string name="FM_CL_0041">Tomorrow\’s schedule: %1$s item(s)</string>
    <string name="FM_CL_0042">Tomorrow\’s ToDo: %1$s item(s)</string>


    <string name="cl_schedule_holiday_name">[H]%1$s</string>
    <string name="cl_schedule_birth_day_name">[B]%1$s</string>
    <string name="cl_schedule_offer_name">%1$s</string>
    <string name="my_calendar">My calendar</string>
    <string name="check_all">Check all</string>
    <string name="cl_footer_todo">ToDo</string>
    <string name="todo_title">ToDo</string>
    <string name="content">Content</string>
    <string name="sure_to_delete">Are you sure to delete this ToDo?</string>
    <string name="show_finished_task">Show finished tasks</string>
    <string name="deadline">Deadline</string>
    <string name="hide_unfinished_task">Hide finished tasks</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="no_deadline">No deadline</string>
    <string name="tap_button_to_add">Tap ＋ button to add task</string>
    <string name="this_month_todo">This month ToDo</string>
    <string name="select_from_group">Select from group</string>
    <string name="select_user">Select user</string>
    <string name="select_group">Select group</string>
    <string name="cl_schedule_form_item_scope">Public setting</string>
    <string name="two_things_todo">%1$s thing(s) ToDo →</string>
    <string name="schedule">Schedule</string>
    <string name="show_today">Show Today</string>
    <string name="public_str">Public</string>
    <string name="private_str">Private schedule \n   (Users can see only date and time of schedule)</string>
    <string name="complete_private">Complete private \n    (Users can\'t see any information of schedule)</string>
    <string name="schedule_mystery">Private</string>
    <string name="today_empty_todo">There is no ToDo for today</string>
    <string name="holiday">Holiday</string>
    <string name="filter">Filter</string>
    <string name="show_current_month">Show this month</string>
    <string name="select_facility">Select facility</string>
    <string name="comma">,</string>
    <string name="day"></string>
    <string name="select_user_all">Select all</string>
    <string name="choose_user">Join user</string>
    <string name="choose_group">Select department</string>
    <string name="overtime_early">Overtime (Early)</string>
    <string name="overtime_lately">Overtime</string>
    <string name="holiday_work">HolidayWork</string>
    <string name="japan_day" />
    <string name="calendar_common_delete">Delete</string>
</resources>
