<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/cs_common_match_wrap"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginBottom="@dimen/margin_50dp"
              android:layout_marginLeft="@dimen/margin_20dp"
              android:layout_marginRight="@dimen/margin_20dp"
              android:layout_marginTop="@dimen/margin_50dp"
              android:background="@drawable/shape_normal_transparent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/margin_3dp">

    <LinearLayout
        style="@style/cs_common_match_wrap"
        android:background="@drawable/shape_common_title"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <TextView
            style="@style/wl_common_text"
            android:layout_weight="1"
            android:text="@string/cl_schedule_edit_mode_title"
            android:textColor="@color/chiase_white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_id_only_this"
        style="@style/wf_common_item_linear2"
        android:background="@drawable/state_common_selectable_row">

        <TextView
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:text="@string/cl_schedule_edit_mode_only_this"/>
    </LinearLayout>

    <View style="@style/cs_common_divider"/>

    <LinearLayout
        android:id="@+id/lnr_id_only_future"
        style="@style/wf_common_item_linear2"
        android:background="@drawable/state_common_selectable_row">

        <TextView
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:text="@string/cl_schedule_edit_mode_only_future"/>
    </LinearLayout>

    <View style="@style/cs_common_divider"/>

    <LinearLayout
        android:id="@+id/lnr_id_all"
        style="@style/wf_common_item_linear2"
        android:background="@drawable/state_common_selectable_row">

        <TextView
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:text="@string/cl_schedule_edit_mode_all"/>
    </LinearLayout>

    <View style="@style/cs_common_divider"/>

    <LinearLayout
        android:id="@+id/lnr_id_cancel"
        style="@style/wf_common_item_linear2"
        android:background="@drawable/state_common_selectable_row">

        <TextView
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:text="@string/chiase_common_cancel"/>
    </LinearLayout>

</LinearLayout>
