<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    style="@style/wf_common_match">

    <include layout="@layout/view_common_header" />

    <ScrollView
        style="@style/wf_common_match"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/lnr_id_content"
            style="@style/cs_common_match"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_16dp"
            android:visibility="invisible">

            <LinearLayout style="@style/wf_common_item_linear2">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cl_schedule_form_all_day" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/swt_id_all_day"
                    style="@style/cs_common_wrap"
                    android:clickable="false"
                    android:theme="@style/wf_common_switch" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout style="@style/wf_common_item_linear2">

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_start_date"
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    custom:mName="startDate" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_start_time"
                    style="@style/wl_common_edit_text2"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    custom:mName="startTime" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout
                android:id="@+id/lnr_id_end_date"
                style="@style/wf_common_item_linear2">

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_end_date"
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    custom:mName="endDate" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_end_time"
                    style="@style/wl_common_edit_text2"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    custom:mName="endTime" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout
                style="@style/wf_common_item_linear2"
                android:orientation="horizontal">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_form_repeat" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_repeat"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:text="@string/chiase_common_none" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />


            <LinearLayout
                android:id="@+id/lnr_id_repeat_until"
                style="@style/wf_common_item_linear2"
                android:background="@drawable/state_common_selectable_row">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_repeat_limit_until" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_repeat_until"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:text="@string/chiase_common_none" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout style="@style/wf_common_item_linear2">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_form_item_name" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_schedule_name"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_weight="1"
                    custom:mName="scheduleName" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout style="@style/wf_common_item_linear2">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_form_item_scope" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_scope"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_weight="1"
                    custom:mName="scheduleName" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout style="@style/wf_common_item_linear2">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_form_item_meeting_room" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_meeting_room"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_weight="1"
                    custom:mName="roomId" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout style="@style/wf_common_item_linear2">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_form_item_category" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_category"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_weight="1"
                    custom:mName="categoryId" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout
                android:id="@+id/lnr_id_schedule_url"
                style="@style/wf_common_item_linear2">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_width="wrap_content"
                    android:text="@string/cl_schedule_form_item_url" />

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_schedule_url"
                    style="@style/wl_common_edit_text2"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:textColor="@android:color/holo_blue_dark"
                    custom:mName="scheduleUrl" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout
                style="@style/wf_common_item_linear"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_join_user"
                    style="@style/wl_common_text"
                    android:text="@string/cl_schedule_form_item_join_user" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout
                android:id="@+id/lnr_id_join_user_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/state_common_selectable_row"
                android:gravity="center_horizontal">

                <HorizontalScrollView
                    style="@style/wf_common_item_linear2"
                    android:layout_width="wrap_content"
                    android:background="@drawable/state_common_selectable_row"
                    android:layout_gravity="center_horizontal"
                    android:minHeight="@dimen/margin_30dp">

                    <trente.asia.calendar.commons.views.UserListLinearLayout
                        android:id="@+id/lnr_id_container_join_user_list"
                        style="@style/cs_common_match_wrap" />

                </HorizontalScrollView>

            </LinearLayout>


            <View style="@style/cs_common_divider" />

            <LinearLayout
                style="@style/wf_common_item_linear"
                android:orientation="vertical">

                <TextView
                    style="@style/wl_common_text"
                    android:text="@string/cl_schedule_form_item_schedule_note" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

            <LinearLayout
                style="@style/wf_common_item_linear2"
                android:orientation="vertical">

                <trente.asia.android.view.ChiaseTextView
                    android:id="@+id/txt_id_schedule_note"
                    style="@style/wl_common_text"
                    custom:mName="scheduleNote" />
            </LinearLayout>

            <View style="@style/cs_common_divider" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
