<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <View style="@style/cs_common_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wf_app_color_base"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/lnr_view_footer_monthly"
            style="@style/cs_common_wrap"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <trente.asia.android.view.ChiaseImageView
                style="@style/cs_common_wrap"
                android:layout_marginTop="@dimen/margin_5dp"
                android:alpha="0.5"
                android:src="@drawable/cl_footer_monthly" />

            <trente.asia.android.view.ChiaseTextView
                style="@style/cs_text_footer_item"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/margin_5dp"
                android:text="@string/cl_footer_monthly"
                android:textColor="@color/core_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_view_footer_weekly"
            style="@style/cs_common_wrap"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <trente.asia.android.view.ChiaseImageView
                style="@style/cs_common_wrap"
                android:layout_marginTop="@dimen/margin_5dp"
                android:alpha="0.5"
                android:src="@drawable/cl_footer_weekly" />

            <trente.asia.android.view.ChiaseTextView
                style="@style/cs_text_footer_item"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/margin_5dp"
                android:text="@string/cl_footer_weekly"
                android:textColor="@color/core_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_view_footer_daily"
            style="@style/cs_common_wrap"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <trente.asia.android.view.ChiaseImageView
                style="@style/cs_common_wrap"
                android:layout_marginTop="@dimen/margin_5dp"
                android:alpha="0.5"
                android:src="@drawable/cl_footer_daily" />

            <trente.asia.android.view.ChiaseTextView
                style="@style/cs_text_footer_item"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/margin_5dp"
                android:text="@string/cl_footer_daily"
                android:textColor="@color/core_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_view_footer_todo"
            style="@style/cs_common_wrap"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <trente.asia.android.view.ChiaseImageView
                style="@style/cs_common_wrap"
                android:layout_marginTop="@dimen/margin_5dp"
                android:alpha="0.5"
                android:src="@drawable/cl_todo_menu" />

            <trente.asia.android.view.ChiaseTextView
                style="@style/cs_text_footer_item"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/margin_5dp"
                android:text="@string/cl_footer_todo"
                android:textColor="@color/core_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_view_footer_setting"
            style="@style/cs_common_wrap"
            android:layout_width="@dimen/margin_0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <trente.asia.android.view.ChiaseImageView
                style="@style/cs_common_wrap"
                android:layout_marginTop="@dimen/margin_5dp"
                android:alpha="0.5"
                android:src="@drawable/cl_footer_setting" />

            <trente.asia.android.view.ChiaseTextView
                style="@style/cs_text_footer_item"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/margin_5dp"
                android:text="@string/cl_footer_setting"
                android:textColor="@color/core_gray" />
        </LinearLayout>

    </LinearLayout>

</merge>