<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/cs_common_match_wrap"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginBottom="@dimen/margin_50dp"
              android:layout_marginLeft="@dimen/margin_20dp"
              android:layout_marginRight="@dimen/margin_20dp"
              android:layout_marginTop="@dimen/margin_50dp"
              android:background="@drawable/shape_normal_transparent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/margin_3dp">

    <LinearLayout
        style="@style/cs_common_match_wrap"
        android:background="@drawable/shape_common_title"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">

        <TextView
            android:id="@+id/txt_id_edit_mode_title"
            style="@style/wl_common_text"
            android:layout_weight="1"
            android:text="Confirm duplicate"
            android:textColor="@color/chiase_white"/>
    </LinearLayout>

    <LinearLayout
        style="@style/wf_common_item_linear"
        android:background="@drawable/state_common_selectable_row">

        <TextView
            android:id="@+id/txt_cl_confirm_label1"
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:textStyle="italic"
            android:text="@string/cl_schedule_confirm_mode_label_user"/>

        <TextView
            android:id="@+id/txt_cl_confirm_message1"
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:text="confirm messagen in here"/>

        <TextView
            android:id="@+id/txt_cl_confirm_label2"
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:textStyle="italic"
            android:text="@string/cl_schedule_confirm_mode_label_room"/>

        <TextView
            android:id="@+id/txt_cl_confirm_message2"
            style="@style/wl_common_text"
            android:layout_width="wrap_content"
            android:text="confirm messagen in here"/>

    </LinearLayout>

    <View style="@style/cs_common_divider"/>

    <LinearLayout
        style="@style/wf_common_match"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnr_id_confirm_cancel"
            style="@style/wf_common_item_linear2"
            android:background="@drawable/state_common_selectable_row"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                style="@style/wl_common_text"
                android:layout_width="wrap_content"
                android:text="@string/chiase_common_cancel"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_id_confirm_ok"
            style="@style/wf_common_item_linear2"
            android:background="@drawable/state_common_selectable_row"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                style="@style/wl_common_text"
                android:layout_width="wrap_content"

                android:text="@string/cl_schedule_confirm_mode_action_ok"/>
        </LinearLayout>




    </LinearLayout>


</LinearLayout>
